--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Real</string>
     <string name="escibe">Escribir mensaje...</string>
     <string name="enviar">Enviar</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_card_view__solicitudes">CardView_Solicitudes</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_card_view_buscar_usuarios">Card_view_buscar_usuarios</string>
 </resources>
